20080311 snapshot.c,snap_accessors.txt,szx.c,accessor.pl: add support for
         saving custom machine ROMs in snapshots (szx only so far) (Fred).
20080312 szx.c: don't regard 24k ROM blocks as invalid as they are used in the
         2068s (Fred).
20080312 szx.c: try to avoid memory leak on write of custom ROM block (Fred).
20080315 sna.c,z80.c: note info loss of custom ROM block when writing z80 and
         sna format snapshots (Fred).
20080315 accessor.pl,sna.c,snap_accessors.txt,snapshot.c,szx.c,z80.c: support
         for Beta 128 custom ROMs in snapshots (patch #1844606) (Stuart).
20080319 ide.c: changes to allow DivIDE to support FATware from
         http://www.dusky.sk/zxs/; add ATA/ATAPI commands 0x21, 0x31, 0xA1.
20080319 ide.c: changes to allow DivIDE to support FATware from
         http://www.dusky.sk/zxs/; per-drive status and error registers, return
         0x00 when reading the command status register of a missing drive and
         advance LBA/CHS registers to next sector in seek() only if it is the
         last sector to read/write. 
20080319 ide.c: changes to allow DivIDE to support FATware from
         http://www.dusky.sk/zxs/; improved implementation of INITIALIZE
         DEVICE PARAMETERS command.
20080322 configure.in: add --without-libgcrypt option (Stuart).
20080401 libspectrum.h.in,tape.c,test/{edges.c,test.h,test15.c}: add support
	 for tape acceleration (patch #1880376).
20080409 szx.c: write 2 ROMs totalling 32k for Pentagon 128k and 3 ROMs
         totalling 48k for newer Pentagon models (Fred).
20080417 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for Kempston mouse for szx snapshots (Fred).
20080418 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for Simple 8-bit IDE interface for szx snapshots (Fred).
20080422 szx.c: don't bother with enabled flag for the Simple 8-bit IDE block
         on the suggestion of Jon Needle (Fred).