@@ -639,3 +639,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          add support for Simple 8-bit IDE interface for szx snapshots (Fred).
 20080422 szx.c: don't bother with enabled flag for the Simple 8-bit IDE block
          on the suggestion of Jon Needle (Fred).
+20080422 sna.c,z80.c: note info loss of Simple 8-bit IDE info when writing z80
+         and sna format snapshots (Fred).
